--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "consoletvs/charts": "6.*",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-
-        "laravelcollective/html": "^5.3.0",
-        "styde/html": "~1.0",
-
         "laravelcollective/html": "^5.5.0",
+        "styde/html": "~1.0",
         "yajra/laravel-datatables": "1.0",
-
         "yajra/laravel-datatables-oracle": "^8.9"
     },
     "require-dev": {
