--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.5.0",
+        "phpoffice/phpspreadsheet": "^1.6",
         "styde/html": "~1.0",
         "yajra/laravel-datatables": "1.0",
-        "yajra/laravel-datatables-oracle": "^8.9"
+        "yajra/laravel-datatables-oracle": "^8.9",
+        "maatwebsite/excel":"~2.1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
